--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,9 @@
 <resources>
     <string name="app_name">FirebaseChat</string>
+
     <string name="title_friend">친구</string>
     <string name="title_chat">채팅</string>
     <string name="title_more">더보기</string>
 
+    <string name="dummy_string">Dummy</string>
 </resources>
