--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,10 +4,18 @@
     <string name="title_friend">친구</string>
     <string name="title_chat">채팅</string>
     <string name="title_more">더보기</string>
+    <string name="title_search_friend">이메일로 친구 찾기</string>
 
     <string name="label_chat">1:1 채팅</string>
     <string name="label_chat_alone">나와의 채팅</string>
     <string name="label_edit_profile">프로필 수정</string>
+    <string name="label_friend_email">친구 이메일 주소</string>
+    <string name="label_button_friend_add">친구 추가</string>
+
+
+    <string name="message_title_friend_not_found">사용자를 찾을 수 없습니다.</string>
+    <string name="message_content_friend_not_found">사용자 이메일을 다시 확인해 주세요. </string>
+    <string name="message_cant_add_friend">사용자를 추가할 수 없습니다.</string>
 
     <string name="dummy_string">Dummy</string>
 
