--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">FirebaseChat</string>
+    <string name="default_notification_channel_id">default_notification_channel_id</string>
 
     <string name="title_friend">친구</string>
     <string name="title_chat">채팅</string>
