--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="message_title_friend_not_found">사용자를 찾을 수 없습니다.</string>
     <string name="message_content_friend_not_found">사용자 이메일을 다시 확인해 주세요. </string>
     <string name="message_cant_add_friend">사용자를 추가할 수 없습니다.</string>
+    <string name="message_cant_add_friend_info">자신의 계정은 친구로 추가할 수 없습니다.</string>
 
     <string name="dummy_string">Dummy</string>
 
