--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,12 +6,18 @@
     <string name="title_chat">채팅</string>
     <string name="title_more">더보기</string>
     <string name="title_search_friend">이메일로 친구 찾기</string>
+    <string name="action_edit_profile">완료</string>
 
     <string name="label_chat">1:1 채팅</string>
     <string name="label_chat_alone">나와의 채팅</string>
     <string name="label_edit_profile">프로필 수정</string>
     <string name="label_friend_email">친구 이메일 주소</string>
     <string name="label_button_friend_add">친구 추가</string>
+    <string name="label_edit_name">이름</string>
+    <string name="label_edit_status_message">상태 메세지</string>
+    <string name="label_edit_phone_number">전화번호</string>
+    <string name="label_edit_email">이메일</string>
+
 
 
     <string name="message_title_friend_not_found">사용자를 찾을 수 없습니다.</string>
